// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default display, with profile image and no edit link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  position: relative;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 24px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

<div
  className="c0"
>
  ProfileImage({"size":80,"viewer":"[Object]"})
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      John Doe
    </span>
    <span
      className="c3"
    >
      john@doe.com
    </span>
  </div>
</div>
`;

exports[`Render with edit link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  position: relative;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 24px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

<div
  className="c0"
>
  ProfileImage({"size":80,"viewer":"[Object]"})
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      John Doe
    </span>
    <span
      className="c3"
    >
      john@doe.com
    </span>
    Button({"isShortHeight":true,"isTextOnly":true,"isTextOnlyNoPadding":true,"children":"Edit Account"})
  </div>
</div>
`;

exports[`Render with first name only 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  position: relative;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 24px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

<div
  className="c0"
>
  ProfileImage({"size":80,"viewer":"[Object]"})
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      John
    </span>
    <span
      className="c3"
    >
      john@doe.com
    </span>
  </div>
</div>
`;

exports[`Render with initials instead of profile image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 16px;
  position: relative;
}

.c3 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 24px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
  -webkit-align-self: left;
  -ms-flex-item-align: left;
  align-self: left;
  margin-bottom: 4px;
}

<div
  className="c0"
>
  ProfileImage({"size":80,"viewer":"[Object]"})
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      John Doe
    </span>
    <span
      className="c3"
    >
      john@doe.com
    </span>
  </div>
</div>
`;
